--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Run Buddy</h1>
     </heading>
     <main>
-      <h2>What We Do</h2>
+      <h2>What We Do What You Do Your Trainers Reach Out</h2>
       <h2>What We Do</h2>
       <h2>Meet The Trainers</h2>
       <h2>Reach Out</h2>
