html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -4,16 +4,123 @@
     <title> </title>
   </head>
   <body>
-    <heading>
+    <!-- navigation-->
+    <header>
       <h1>Run Buddy</h1>
-    </heading>
+      <nav>
+        <ul>
+          <li>What We Do</li>
+          <li>What You Do</li>
+          <li>Your Trainers</li>
+          <li>Reach out</li>
+        </ul>
+      </nav>
+    </header>
+    <!-- hero/jumbotron -->
+    <section class="hero">
+      <form>
+        <h4>Get Started Today!</h4>
+        <p>Fill out this form and one of our trainers will schedule a consult.</p>
+        <p>Enter full name:</p>
+        <input type="text" placeholder="Your Name">
+        <p>Enter email address:</p>
+        <input type="email" placeholder="Email Address">
+        <p>Enter a telephone number</p>
+        <input type="tel" placeholder="Phone Number">
+        <p>Have you worked out with a trainer before? <input type="radio">Yes <input type="radio">No</p>
+        <p>I acknowledge that I am at least 18 years of age. <input type="radio"></p>
+        <button>Get Running!</button>
+      </form>
+    </section>
     <main>
-      <h2>What We Do What You Do Your Trainers Reach Out</h2>
-      <h2>What We Do</h2>
-      <h2>Meet The Trainers</h2>
-      <h2>Reach Out</h2>
-      <img src="#" alt="image of heart" width="10px" height="10px" />
-      <h2>Made with love by Run Buddy</h2>
-    </main>
+    <!-- "what we do" section -->
+      <section class="about">
+        <h2>What We Do</h2>
+        <hr class="yellow">
+        <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy
+          direct trade Blue Bottle chillwave you probably haven't heard of them single-orgin coffee Vice fanny pack fixie Odd Future Austin
+          fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable
+          intelligentsia umami deep v craft
+        </p>
+      </section>
+    <!-- "what you do" section -->
+      <section class="whatYouDo">
+        <h2>What You Do</h2>
+        <hr class="blue">
+        <image src=""></image>
+        <h3>Step 1: Fill Out The Form Above.</h3>
+        <p>You're already here, so why not?</p>
+        <image src=""></image>
+        <h3>Step 2: Consult With One Of Our Trainers.</h3>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        <image></image>
+        <h3>Step 3: Get Running.</h3>
+        <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+        <image></image>
+        <h3>Step 4: See Results.</h3>
+        <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+      </section>
+    <!-- "meet the trainers" section -->
+      <section class="trainers">
+        <h2>Meet the Trainers</h2>
+        <hr class="yellow">
+        <div class="container">
+          <image></image>
+          <h4>Arron Stephens</h4>
+          <h5>Speed / Strength</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illum amet enim consequatur exercitationem? 
+            Exercitationem beatae nisi quae, iusto aperiam, labore voluptatibus ex molestias, dolor id voluptatem? Officia, 
+            a sit!
+          </p>
+        </div>
+        <div class="container">
+          <h4>Joanna Gill</h4>
+          <h5>Endurance</h5>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae qui aspernatur consequuntur illum iusto 
+            ipsam officia labore porro optio exercitationem similique tempore quam natus distinctio iste, ducimus sint laudantium 
+            doloribus.
+          </p>
+        </div>
+        <div class="container">
+          <h4>Harry "The Headband" Smith</h4>
+          <h5>Strength</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem voluptatem sit itaque, perspiciatis, 
+            repellendus beatae alias consequuntur, voluptatibus atque magni excepturi. Enim commodi cum sunt dicta quos 
+            obcaecati consequuntur.
+          </p>
+        </section>
+    <!-- "reach out" section -->
+      </section class="contact">
+      <div class="reachOut">
+        <h2>Reach Out</h2>
+        <hr class="blue">
+        <div class="contact">
+          <image></image>
+          <h3>Run Buddy</h3>
+          <p>Any questions or concerns before signing up?</p>
+          <p>55 Main Street
+            <br>
+            Some Town, Ca
+            <br>
+            12345
+            <br>
+            P: 555.RUN.BUDZ (555.786.2839)
+            <br>
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </p>
+        </div>
+      </section>
+      </main>
+    <!-- footer -->
+        <footer>
+          <h3 class="blue">❤️ Made with love by Run Buddy.</h3>
+          <p>
+            <a href="#">Read Our Privacy Policy</a>
+          <br>
+            © 2020 Run Buddy, Inc.
+          </p>
+        </div>
+        <image></image>
+      </footer>
   </body>
 </html>
