--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
   <body>
     <!-- navigation-->
     <header>
-      <h1>Run Buddy</h1>
+      <h1>
+        <a href="/">Run Buddy</a>
+      </h1>
       <nav>
         <ul>
-          <li>What We Do</li>
-          <li>What You Do</li>
-          <li>Your Trainers</li>
-          <li>Reach out</li>
+          <li>
+            <a href="#what-we-do">What We Do</a>
+          </li>
+          <li>
+            <a href="#what-you-do">What You Do</a>
+          </li>
+          <li>
+            <a href="#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="#reach-out">Reach Out</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -34,7 +44,7 @@
     </section>
     <main>
     <!-- "what we do" section -->
-      <section class="about">
+      <section id="what-we-do">
         <h2>What We Do</h2>
         <hr class="yellow">
         <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy
@@ -44,7 +54,7 @@
         </p>
       </section>
     <!-- "what you do" section -->
-      <section class="whatYouDo">
+      <section id="what-you-do">
         <h2>What You Do</h2>
         <hr class="blue">
         <image src=""></image>
@@ -61,7 +71,7 @@
         <p>Bi-weekly checkins with your trainer will keep you focused.</p>
       </section>
     <!-- "meet the trainers" section -->
-      <section class="trainers">
+      <section id="your-trainers">
         <h2>Meet the Trainers</h2>
         <hr class="yellow">
         <div class="container">
@@ -90,8 +100,8 @@
           </p>
         </section>
     <!-- "reach out" section -->
-      </section class="contact">
-      <div class="reachOut">
+      <section id="reach-out">
+      <div class="container">
         <h2>Reach Out</h2>
         <hr class="blue">
         <div class="contact">
