--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> </title>
+    <title> Run Buddy</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!-- navigation-->
