styles, ids, and classes

--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
       </nav>
     </header>
     <!-- hero/jumbotron -->
-    <section class="hero">
-      <form>
-        <h4>Get Started Today!</h4>
-        <p>Fill out this form and one of our trainers will schedule a consult.</p>
-        <p>Enter full name:</p>
-        <input type="text" placeholder="Your Name">
-        <p>Enter email address:</p>
-        <input type="email" placeholder="Email Address">
-        <p>Enter a telephone number</p>
-        <input type="tel" placeholder="Phone Number">
-        <p>Have you worked out with a trainer before? <input type="radio">Yes <input type="radio">No</p>
-        <p>I acknowledge that I am at least 18 years of age. <input type="radio"></p>
-        <button>Get Running!</button>
-      </form>
+    <section id="hero">
+      <div class="hero">
+        <form>
+          <h3>Get Started Today!</h3>
+          <p>Fill out this form and one of our trainers will schedule a consult.</p>
+          <p>Enter full name:</p>
+          <input type="text" placeholder="Your Name">
+          <p>Enter email address:</p>
+          <input type="email" placeholder="Email Address">
+          <p>Enter a telephone number</p>
+          <input type="tel" placeholder="Phone Number">
+          <p>Have you worked out with a trainer before? <input type="radio">Yes <input type="radio">No</p>
+          <p>I acknowledge that I am at least 18 years of age. <input type="radio"></p>
+          <button>Get Running!</button>
+        </form>
+      <div>
     </section>
     <main>
     <!-- "what we do" section -->
@@ -105,10 +107,15 @@
       <div class="container">
         <h2>Reach Out</h2>
         <hr class="blue">
-        <div class="contact">
-          <image></image>
+        <div class="contactInfo">
+          <image class="google" src="assets/pictures/google.jpg" 
+          alt="image of google maps"
+          width="400px"
+          </image>
           <h3>Run Buddy</h3>
-          <p>Any questions or concerns before signing up?</p>
+          <p>Any questions or concerns before signing up?
+          <br>
+          Let us know and we'll be happy to tak to you!</p>
           <p>55 Main Street
             <br>
             Some Town, Ca
@@ -120,6 +127,7 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </p>
         </div>
+      </div>
       </section>
       </main>
     <!-- footer -->
