--- a/index.html
+++ b/index.html
@@ -28,20 +28,33 @@
       </nav>
     </header>
     <!-- hero/jumbotron -->
-    <section id="hero">
-      <div class="hero">
-        <form>
+    <section class="hero">
+      <div class="hero-form">
           <h3>Get Started Today!</h3>
           <p>Fill out this form and one of our trainers will schedule a consult.</p>
-          <p>Enter full name:</p>
-          <input type="text" placeholder="Your Name">
-          <p>Enter email address:</p>
-          <input type="email" placeholder="Email Address">
-          <p>Enter a telephone number</p>
-          <input type="tel" placeholder="Phone Number">
-          <p>Have you worked out with a trainer before? <input type="radio">Yes <input type="radio">No</p>
-          <p>I acknowledge that I am at least 18 years of age. <input type="radio"></p>
-          <button>Get Running!</button>
+          <form>
+            <label for="name">Enter full name:</label>
+            <input class="form-input" type="text" placeholder="Your Name" name="name" id="name" />
+            <label for="email">Enter email address:</label>
+            <input class="form-input" type="email" placeholder="Email Address" name="email" id="email" />
+            <label for="phone">Enter a telephone number:</label>
+            <input class="form-input" type="tel" placeholder="Phone Number" name="phone" id="phone" />
+            <p>
+              Have you worked out with a trainer before?
+              <input type="radio" name="trainer-confirm" id="trainer-yes" />
+              <label for="trainer-yes">Yes</label>
+              <input type="radio" name="trainer-confirm" id="trainer-no" />
+              <label for="trainer-no">No</label>
+            </p>
+            <p>
+              <label for="checkbox" >
+                I acknowledge that I am at least 18 years of age.
+              </label>
+              <input type="checkbox" name="age-confirm" id="checkbox" />
+            </p>
+            <button type="submit">
+              Get running!
+            </button>
         </form>
       <div>
     </section>
@@ -132,12 +145,11 @@
       </main>
     <!-- footer -->
         <footer>
-          <h3 class="blue">❤️ Made with love by Run Buddy.</h3>
-          <p>
+          <h2 class="blue">❤️ Made with love by Run Buddy.</h3>
+          <div>
             <a href="#">Read Our Privacy Policy</a>
-          <br>
+            <br>
             © 2020 Run Buddy, Inc.
-          </p>
         </div>
         <image></image>
       </footer>
