div elements to body

--- a/index.html
+++ b/index.html
@@ -73,18 +73,26 @@
       <section id="what-you-do">
         <h2>What You Do</h2>
         <hr class="blue">
-        <image src=""></image>
-        <h3>Step 1: Fill Out The Form Above.</h3>
-        <p>You're already here, so why not?</p>
-        <image src=""></image>
-        <h3>Step 2: Consult With One Of Our Trainers.</h3>
-        <p>Are you here to build muscle, lose weight, or just feel good?</p>
-        <image></image>
-        <h3>Step 3: Get Running.</h3>
-        <p>Hit the ground running (literally) once your trainer lays out your plan</p>
-        <image></image>
-        <h3>Step 4: See Results.</h3>
-        <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+        <div>
+          <image src=""></image>
+          <h3>Step 1: Fill Out The Form Above.</h3>
+          <p>You're already here, so why not?</p>
+        </div>
+        <div>
+          <image src=""></image>
+          <h3>Step 2: Consult With One Of Our Trainers.</h3>
+          <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+        <div>
+          <image></image>
+          <h3>Step 3: Get Running.</h3>
+          <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+        </div>
+        <div>
+          <image></image>
+          <h3>Step 4: See Results.</h3>
+          <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+        </div>
       </section>
     <!-- "meet the trainers" section -->
       <section id="your-trainers">
