--- a/index.html
+++ b/index.html
@@ -74,22 +74,29 @@
         <h2>What You Do</h2>
         <hr class="blue">
         <div>
-          <image src=""></image>
+          <image src="../assets/images/svg/step-1.svg"
+          alt="">
+          </image>
           <h3>Step 1: Fill Out The Form Above.</h3>
           <p>You're already here, so why not?</p>
         </div>
         <div>
-          <image src=""></image>
+          <image src="../assets/images/svg/step-2.svg" 
+          alt="">
+          </image>
           <h3>Step 2: Consult With One Of Our Trainers.</h3>
           <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
         <div>
-          <image></image>
+          <image src="../assets/images/svg/step-3.svg" 
+          alt="">
+          </image>
           <h3>Step 3: Get Running.</h3>
           <p>Hit the ground running (literally) once your trainer lays out your plan</p>
         </div>
         <div>
-          <image></image>
+          <image src="../assets/images/svg/step-4.svg" 
+          alt=""></image>
           <h3>Step 4: See Results.</h3>
           <p>Bi-weekly checkins with your trainer will keep you focused.</p>
         </div>
