style what we do section

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
     </section>
     <main>
     <!-- "what we do" section -->
-      <section id="what-we-do">
+      <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
-        <hr class="yellow">
         <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy
           direct trade Blue Bottle chillwave you probably haven't heard of them single-orgin coffee Vice fanny pack fixie Odd Future Austin
           fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable
@@ -72,7 +71,6 @@
     <!-- "what you do" section -->
       <section id="what-you-do">
         <h2>What You Do</h2>
-        <hr class="blue">
         <div>
           <image src="../assets/images/svg/step-1.svg"
           alt="">
