meet the trainers section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
     <!-- "what we do" section -->
       <section id="what-we-do" class="intro">
-        <h2>What We Do</h2>
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy
           direct trade Blue Bottle chillwave you probably haven't heard of them single-orgin coffee Vice fanny pack fixie Odd Future Austin
           fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable
@@ -69,70 +69,93 @@
         </p>
       </section>
     <!-- "what you do" section -->
-      <section id="what-you-do">
-        <h2>What You Do</h2>
+      <section id="what-you-do" class="steps">
+        <h2 class="section-title secondary-border">What You Do</h2>
         <div>
-          <image src="../assets/images/svg/step-1.svg"
-          alt="">
-          </image>
-          <h3>Step 1: Fill Out The Form Above.</h3>
+          <img
+          src="../assets/images/svg/step-1.svg"
+          alt=""
+          />
+          <h3>Step 1: <span>Fill Out The Form Above.</span></h3>
           <p>You're already here, so why not?</p>
         </div>
         <div>
-          <image src="../assets/images/svg/step-2.svg" 
-          alt="">
-          </image>
-          <h3>Step 2: Consult With One Of Our Trainers.</h3>
+          <img
+          src="../assets/images/svg/step-2.svg" 
+          alt=""
+          />
+          <h3>Step 2: <span>Consult With One Of Our Trainers.</span></h3>
           <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
         <div>
-          <image src="../assets/images/svg/step-3.svg" 
-          alt="">
-          </image>
-          <h3>Step 3: Get Running.</h3>
+          <img
+          src="../assets/images/svg/step-3.svg" 
+          alt=""
+          />
+          <h3>Step 3: <span>Get Running.</span></h3>
           <p>Hit the ground running (literally) once your trainer lays out your plan</p>
         </div>
         <div>
-          <image src="../assets/images/svg/step-4.svg" 
-          alt=""></image>
-          <h3>Step 4: See Results.</h3>
+          <img
+          src="../assets/images/svg/step-4.svg" 
+          alt=""
+          />
+          <h3>Step 4: <span>See Results.</span></h3>
           <p>Bi-weekly checkins with your trainer will keep you focused.</p>
         </div>
       </section>
     <!-- "meet the trainers" section -->
-      <section id="your-trainers">
-        <h2>Meet the Trainers</h2>
-        <hr class="yellow">
-        <div class="container">
-          <image></image>
-          <h4>Arron Stephens</h4>
-          <h5>Speed / Strength</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illum amet enim consequatur exercitationem? 
+      <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+          Meet the Trainers
+        </h2>
+        <article class="trainer">
+          <img
+          src="../assets/images/trainers/trainer-1.jpg"
+          alt="Arron Stephens in his workout clothes, ready to pump iron"
+          />
+          <div class="trainer-bio text-left">
+            <h3>Arron Stephens</h3>
+            <h4>Speed / Strength</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illum amet enim consequatur exercitationem? 
             Exercitationem beatae nisi quae, iusto aperiam, labore voluptatibus ex molestias, dolor id voluptatem? Officia, 
             a sit!
-          </p>
+            </p>
         </div>
-        <div class="container">
-          <h4>Joanna Gill</h4>
-          <h5>Endurance</h5>
+      </article>
+      <article class="trainer">
+        <div class="trainer-bio text-right">
+          <h3>Joanna Gill</h3>
+          <h4>Endurance</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae qui aspernatur consequuntur illum iusto 
-            ipsam officia labore porro optio exercitationem similique tempore quam natus distinctio iste, ducimus sint laudantium 
-            doloribus.
+              ipsam officia labore porro optio exercitationem similique tempore quam natus distinctio iste, ducimus sint laudantium 
+              doloribus.
           </p>
         </div>
-        <div class="container">
-          <h4>Harry "The Headband" Smith</h4>
-          <h5>Strength</h5>
+        <img
+        src="../assets/images/trainers/trainer-2.jpg"
+        alt="Joanna Gill cooling off after a workout"
+        />
+      </article>
+      <article class="trainer">
+        <img
+          src="../assets/images/trainers/trainer-3.jpg"
+          alt="Harry Smith wearing a headband and lifting comically small pink weights"
+          />
+        <div class="trainer-bio text-left">
+          <h3>Harry "The Headband" Smith</h3>
+          <h4>Strength</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem voluptatem sit itaque, perspiciatis, 
             repellendus beatae alias consequuntur, voluptatibus atque magni excepturi. Enim commodi cum sunt dicta quos 
             obcaecati consequuntur.
           </p>
+        </div>
+      </article>
         </section>
     <!-- "reach out" section -->
       <section id="reach-out">
       <div class="container">
         <h2>Reach Out</h2>
-        <hr class="blue">
         <div class="contactInfo">
           <image class="google" src="assets/pictures/google.jpg" 
           alt="image of google maps"
