--- a/index.html
+++ b/index.html
@@ -154,29 +154,34 @@
         </section>
     <!-- "reach out" section -->
       <section id="reach-out">
-      <div class="container">
         <h2>Reach Out</h2>
         <div class="contactInfo">
-          <image class="google" src="assets/pictures/google.jpg" 
-          alt="image of google maps"
-          width="400px"
-          </image>
+          <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3221.339780999175!2d-86.76994598481492!3d36.15828548008585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88646643c15715d9%3A0xd1555911fab9c9e9!2s33%20Peabody%20St%2C%20Nashville%2C%20TN%2037210!5e0!3m2!1sen!2sus!4v1613338468488!5m2!1sen!2sus"
+          width="400"
+          height="400" 
+          frameborder="0" 
+          style="border:0;" 
+          allowfullscreen=""
+          />
+          </iframe>
+        </div>
+        <div>
           <h3>Run Buddy</h3>
           <p>Any questions or concerns before signing up?
-          <br>
+          <br />
           Let us know and we'll be happy to tak to you!</p>
           <p>55 Main Street
-            <br>
+            <br />
             Some Town, Ca
-            <br>
+            <br />
             12345
-            <br>
+            <br />
             P: 555.RUN.BUDZ (555.786.2839)
-            <br>
+            <br />
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </p>
         </div>
-      </div>
       </section>
       </main>
     <!-- footer -->
