added a missing paragraph

--- a/index.html
+++ b/index.html
@@ -175,9 +175,11 @@
                 <br />
                 12345
                 <br />
-                <em>P: 555.RUN.BUDZ (555.786.2839)
+              </p>
+              <p>
+                P: 555.RUN.BUDZ (555.786.2839)
                 <br />
-                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a> </em>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
               </p>
             </div>
         </div>
