privacy policy and secondary style sheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title> Run Buddy</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -189,7 +190,7 @@
         <footer>
           <h2 class="blue">❤️ Made with love by Run Buddy.</h3>
           <div>
-            <a href="#">Read Our Privacy Policy</a>
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a>
             <br>
             © 2020 Run Buddy, Inc.
         </div>
