--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2 class="section-title secondary-border">What You Do</h2>
         <div>
           <img
-          src="../assets/images/svg/step-1.svg"
+          src="./assets/images/svg/step-1.svg"
           alt=""
           />
           <h3>Step 1: <span>Fill Out The Form Above.</span></h3>
@@ -82,7 +82,7 @@
         </div>
         <div>
           <img
-          src="../assets/images/svg/step-2.svg" 
+          src="./assets/images/svg/step-2.svg" 
           alt=""
           />
           <h3>Step 2: <span>Consult With One Of Our Trainers.</span></h3>
@@ -90,7 +90,7 @@
         </div>
         <div>
           <img
-          src="../assets/images/svg/step-3.svg" 
+          src="./assets/images/svg/step-3.svg" 
           alt=""
           />
           <h3>Step 3: <span>Get Running.</span></h3>
@@ -98,7 +98,7 @@
         </div>
         <div>
           <img
-          src="../assets/images/svg/step-4.svg" 
+          src="./assets/images/svg/step-4.svg" 
           alt=""
           />
           <h3>Step 4: <span>See Results.</span></h3>
@@ -112,7 +112,7 @@
         </h2>
         <article class="trainer">
           <img
-          src="../assets/images/trainers/trainer-1.jpg"
+          src="./assets/images/trainers/trainer-1.jpg"
           alt="Arron Stephens in his workout clothes, ready to pump iron"
           />
           <div class="trainer-bio text-left">
@@ -134,13 +134,13 @@
           </p>
         </div>
         <img
-        src="../assets/images/trainers/trainer-2.jpg"
+        src="./assets/images/trainers/trainer-2.jpg"
         alt="Joanna Gill cooling off after a workout"
         />
       </article>
       <article class="trainer">
         <img
-          src="../assets/images/trainers/trainer-3.jpg"
+          src="./assets/images/trainers/trainer-3.jpg"
           alt="Harry Smith wearing a headband and lifting comically small pink weights"
           />
         <div class="trainer-bio text-left">
