--- a/index.html
+++ b/index.html
@@ -68,12 +68,16 @@
     <main>
     <!-- "what we do" section -->
       <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy
-          direct trade Blue Bottle chillwave you probably haven't heard of them single-orgin coffee Vice fanny pack fixie Odd Future Austin
-          fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable
-          intelligentsia umami deep v craft
-        </p>
+        <div class="flex-row">
+          <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
+          <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy
+            direct trade Blue Bottle chillwave you probably haven't heard of them single-orgin coffee Vice fanny pack fixie Odd Future Austin
+            fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable
+            intelligentsia umami deep v craft
+          </p>
+        </div>
       </section>
     <!-- "what you do" section -->
       <section id="what-you-do" class="steps">
