--- a/index.html
+++ b/index.html
@@ -144,53 +144,55 @@
         </div>
       </section>
     <!-- "meet the trainers" section -->
-      <section id="your-trainers" class="trainers">
+      <section id="your-trainers">
         <h2 class="section-title primary-border">
           Meet the Trainers
         </h2>
+        <div class="trainers">
+          <article class="trainer">
+            <img
+            src="./assets/images/trainers/trainer-1.jpg"
+            alt="Arron Stephens in his workout clothes, ready to pump iron"
+            />
+            <div class="trainer-bio">
+              <h3 class="trainer-name">Arron Stephens</h3>
+              <h4 class="trainer-role">Speed / Strength</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illum amet enim consequatur exercitationem? 
+              Exercitationem beatae nisi quae, iusto aperiam, labore voluptatibus ex molestias, dolor id voluptatem? Officia, 
+              a sit!
+              </p>
+          </div>
+        </article>
         <article class="trainer">
           <img
-          src="./assets/images/trainers/trainer-1.jpg"
-          alt="Arron Stephens in his workout clothes, ready to pump iron"
+          src="./assets/images/trainers/trainer-2.jpg"
+          alt="Joanna Gill cooling off after a workout"
           />
-          <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
-            <h4>Speed / Strength</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illum amet enim consequatur exercitationem? 
-            Exercitationem beatae nisi quae, iusto aperiam, labore voluptatibus ex molestias, dolor id voluptatem? Officia, 
-            a sit!
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae qui aspernatur consequuntur illum iusto 
+                ipsam officia labore porro optio exercitationem similique tempore quam natus distinctio iste, ducimus sint laudantium 
+                doloribus.
             </p>
-        </div>
-      </article>
-      <article class="trainer">
-        <div class="trainer-bio text-right">
-          <h3>Joanna Gill</h3>
-          <h4>Endurance</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae qui aspernatur consequuntur illum iusto 
-              ipsam officia labore porro optio exercitationem similique tempore quam natus distinctio iste, ducimus sint laudantium 
-              doloribus.
-          </p>
-        </div>
-        <img
-        src="./assets/images/trainers/trainer-2.jpg"
-        alt="Joanna Gill cooling off after a workout"
-        />
-      </article>
-      <article class="trainer">
-        <img
-          src="./assets/images/trainers/trainer-3.jpg"
-          alt="Harry Smith wearing a headband and lifting comically small pink weights"
-          />
-        <div class="trainer-bio text-left">
-          <h3>Harry "The Headband" Smith</h3>
-          <h4>Strength</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem voluptatem sit itaque, perspiciatis, 
-            repellendus beatae alias consequuntur, voluptatibus atque magni excepturi. Enim commodi cum sunt dicta quos 
-            obcaecati consequuntur.
-          </p>
-        </div>
-      </article>
-        </section>
+          </div>
+        </article>
+        <article class="trainer">
+          <img
+            src="./assets/images/trainers/trainer-3.jpg"
+            alt="Harry Smith wearing a headband and lifting comically small pink weights"
+            />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem voluptatem sit itaque, perspiciatis, 
+              repellendus beatae alias consequuntur, voluptatibus atque magni excepturi. Enim commodi cum sunt dicta quos 
+              obcaecati consequuntur.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
     <!-- "reach out" section -->
       <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
