--- a/index.html
+++ b/index.html
@@ -197,56 +197,53 @@
       <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3221.339780999175!2d-86.76994598481492!3d36.15828548008585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88646643c15715d9%3A0xd1555911fab9c9e9!2s33%20Peabody%20St%2C%20Nashville%2C%20TN%2037210!5e0!3m2!1sen!2sus!4v1613338468488!5m2!1sen!2sus"
-            width=""
-            height=""
-            frameborder="0" 
-            style="border:0;" 
-            allowfullscreen="">
-            </iframe>
-            <div class="contact-form">
-              <h3>Contact Us</h3>
-              <form>
-                 <label for="contact-name">Your Name</label>
-                 <input type="text" id="contact-name" placeholder="Your Name" />
-            
-                 <label for="contact-message">Message</label>
-                 <textarea id="contact-message" placeholder="Message"></textarea>
-            
-                 <button type="submit">Submit</button>
-                </form>
-            </div>
-            <div class="contact info">
-              <h3>Run Buddy</h3>
-              <p>Any questions or concerns before signing up?
+          <div>
+            <h3>Run Buddy</h3>
+            <p>
+              Any questions or concerns before signing up?
               <br />
-              Let us know and we'll be happy to tak to you!</p>
-              <p>55 Main Street
-                <br />
-                Some Town, Ca
-                <br />
-                12345
-                <br />
-              </p>
-              <p>
-                P: 555.RUN.BUDZ (555.786.2839)
-                <br />
-                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-              </p>
-            </div>
+              Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+              55 Main Street <br />
+              Some Town, Ca <br />
+              12345 <br />
+              P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br />
+              E: <a href="mailto://info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+          </div>
+          <div class="contact-form">
+            <h3>Contact Us</h3>
+            <form>
+              <label for="contact-name">
+                Your Name
+              </label>
+              <input type="text" id="contact-name" placeholder="Your Name" />
+              <label for="contact-message">
+                Message
+              </label>
+              <textarea id="contact-message" placeholder="Message">
+              </textarea>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3221.339780999175!2d-86.76994598481492!3d36.15828548008585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88646643c15715d9%3A0xd1555911fab9c9e9!2s33%20Peabody%20St%2C%20Nashville%2C%20TN%2037210!5e0!3m2!1sen!2sus!4v1613338468488!5m2!1sen!2sus"
+            frameborder="0"
+            style="border:0"
+            allowfullscreen>
+          </iframe>
         </div>
       </section>
       </main>
     <!-- footer -->
         <footer>
-          <h2 class="blue">❤️ Made with love by Run Buddy.</h3>
-          <div>
+          <h2>❤️ Made with love by Run Buddy.</h3>
+          <div class="footer-info">
             <a href="./privacy-policy.html">Read Our Privacy Policy</a>
             <br>
             © 2020 Run Buddy, Inc.
         </div>
-        <image></image>
       </footer>
   </body>
 </html>
