--- a/index.html
+++ b/index.html
@@ -82,21 +82,25 @@
       </section>
     <!-- "what you do" section -->
       <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
-          <div class="step">
-            <h3>Step 1: </h3>
-            <div class="step-info">
-              <div class="step-img">
-                <img
-                src="./assets/images/svg/step-1.svg"
-                alt=""
-                />
-              </div>
-              <div class="step-text">
-                <h4>Fill Out The Form Above</h4>
-                <p> You're already here, so why not?</p>
-              </div>
+        <div class="flex-row">
+          <h2 class="section-title secondary-border">
+            What You Do
+          </h2>
+        </div>  
+        <div class="step">
+          <h3>Step 1: </h3>
+          <div class="step-info">
+            <div class="step-img">
+              <img
+              src="./assets/images/svg/step-1.svg"
+              alt=""
+              />
             </div>
+            <div class="step-text">
+              <h4>Fill Out The Form Above</h4>
+              <p> You're already here, so why not?</p>
+            </div>
+          </div>
         </div>
         <div class="step">
           <h3>Step 2:</h3>
